@@ -29,12 +29,15 @@ Enhancements
   page that sets up the browser window the way you want it for your results. 
 * Fixed some descriptions in various searches; moved some searches to more appropriate categories
 * User-defined searches can be added to a 'localsearches' subdirectory.  These will not be overwritten on upgrading.
+  User-defined searches are indicated in the help and the qsfind popup with a different color, and in the
+  menu with '[local]'
 * Modified to display command as tooltip for shortcut on the menu if a name for the shortcut was supplied.  
   This is helpful to see what the actual command is from the shortcuts menu without having to open up localaliases.txt.
 
 Bug Fixes
 
-* 
+* Duplicate search function names were not being detected due to an invalid xquery path
+* Upcase FORM element were not being detected due to an invalid xquery path
 
 
 -- What's new for 3.1.3 (September 9, 2002)
